--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -27,10 +27,6 @@
 {% set bootDiskSizeGb = properties["bootDiskSizeGb"] %}
 
 resources:
-
-- name: {{ deployment }}-static-ip
-  type: static_address.py
-
 - name: {{ deployment }}-bastion-sa
   type: iam.v1.serviceAccount
   properties:
@@ -351,7 +347,7 @@ resources:
           - --namespace
           - default
           - --set
-          - secrets.username={{ boomiUserEmailID }},secrets.password={{ boomiPassword }},secrets.account={{ boomiAccountID }},volume.server=$(ref.{{ deployment }}-cloud-filestore.fileShareIp),storage.network={{ properties["network"] }},ingress.staticIpName=$(ref.{{ deployment }}-static-ip.staticIpName)
+          - secrets.username={{ boomiUserEmailID }},secrets.password={{ boomiPassword }},secrets.account={{ boomiAccountID }},volume.server=$(ref.{{ deployment }}-cloud-filestore.fileShareIp),storage.network={{ properties["network"] }}
           - '.'
         dir: quick_start/kubernetes/boomi-molecule
         env:
