--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -27,6 +27,9 @@
 {% set bootDiskSizeGb = properties["bootDiskSizeGb"] %}
 
 resources:
+- name: {{ deployment }}-static-ip
+  type: static_address.py
+
 - name: {{ deployment }}-bastion-sa
   type: iam.v1.serviceAccount
   properties:
@@ -347,7 +350,7 @@ resources:
           - --namespace
           - default
           - --set
-          - secrets.username={{ boomiUserEmailID }},secrets.password={{ boomiPassword }},secrets.account={{ boomiAccountID }},volume.server=$(ref.{{ deployment }}-cloud-filestore.fileShareIp),storage.network={{ properties["network"] }}
+          - secrets.username={{ boomiUserEmailID }},secrets.password={{ boomiPassword }},secrets.account={{ boomiAccountID }},volume.server=$(ref.{{ deployment }}-cloud-filestore.fileShareIp),storage.network={{ properties["network"] }},ingress.staticIpName=$(ref.{{ deployment }}-static-ip.staticIpName)
           - '.'
         dir: quick_start/kubernetes/boomi-molecule
         env:
