--- a/boomi_molecule.jinja
+++ b/boomi_molecule.jinja
@@ -30,6 +30,9 @@
 {% set bootDiskSizeGb = properties["bootDiskSizeGb"] %}
 
 resources:
+- name: {{ deployment }}-static-ip
+  type: static_address.py
+
 - name: {{ deployment }}-bastion-sa
   type: iam.v1.serviceAccount
   properties:
@@ -367,7 +370,7 @@ resources:
           - --namespace
           - default
           - --set
-          - secrets.username={{ boomiUserEmailID }},secrets.password={{ boomiPassword }},secrets.account={{ boomiAccountID }},volume.server=$(ref.{{ deployment }}-cloud-filestore.fileShareIp),storage.network={{ network }}
+          - secrets.username={{ boomiUserEmailID }},secrets.password={{ boomiPassword }},secrets.account={{ boomiAccountID }},volume.server=$(ref.{{ deployment }}-cloud-filestore.fileShareIp),storage.network={{ network }},ingress.staticIpName=$(ref.{{ deployment }}-static-ip.staticIpName)
           - '.'
         dir: quick_start/kubernetes/boomi-molecule
         env:
