Updated k8s port range

--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -179,6 +179,16 @@ resources:
         direction: INGRESS
         sourceRanges:
           - 0.0.0.0/0
+      - name: {{ deployment }}-allow-k8s-serviceport
+        allowed:
+          - IPProtocol: tcp
+            ports:
+              - "30000-32767"
+        direction: INGRESS
+        sourceRanges:
+          - 10.0.0.0/8
+          - 172.16.0.0/12
+          - 192.168.0.0/16
 
 - name: {{ deployment }}-cloud-filestore
   type: cloud_filestore.py
