--- a/boomi_molecule.jinja
+++ b/boomi_molecule.jinja
@@ -349,7 +349,7 @@ resources:
         args:
           - clone
           - -b
-          - main
+          - testing
           - https://github.com/vilvamani/gcp-deployment-manager.git
           - quick_start
 
