Enabled token passed auth

--- a/boomi_molecule.jinja
+++ b/boomi_molecule.jinja
@@ -351,7 +351,7 @@ resources:
         args:
           - clone
           - -b
-          - testing
+          - main
           - https://github.com/vilvamani/gcp-deployment-manager.git
           - quick_start
 
